4 encoder support wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,22 @@
 
 cmake_minimum_required(VERSION 3.13)
+# add a project directive
+
 
 # Set board type to Seeed XIAO RP2040
 set(PICO_BOARD seeed_xiao_rp2040)
 
 # Set the PICO_SDK_PATH
 set(PICO_SDK_PATH "${CMAKE_CURRENT_LIST_DIR}/../pico-sdk")
+
+# Set picotool path for MSYS2/Unix environment on Windows
+set(PICOTOOL_EXECUTABLE "/c/picoprojects/tools/bin/picotool.exe")
+set(picotool_FOUND TRUE)
+set(PICOTOOL_FOUND TRUE)
+# Alternative paths in case the above doesn't work
+if(NOT EXISTS ${PICOTOOL_EXECUTABLE})
+    set(PICOTOOL_EXECUTABLE "C:/picoprojects/tools/bin/picotool.exe")
+endif()
 
 # Pull in Raspberry Pi Pico SDK
 include(pico_sdk_import.cmake)
@@ -16,7 +27,9 @@ project(breakout_encoder_project)
 pico_sdk_init()
 
 add_executable(led_encoder
-	led_encoder.cpp
+	main.cpp
+	encoder.cpp
+	ws2812_leds.cpp
 )
 
 # Generate PIO header
@@ -35,11 +48,14 @@ target_link_libraries(led_encoder
 	pico_bootrom
 	breakout_encoder
 	hardware_pio
+	hardware_i2c
+	hardware_gpio
+	hardware_irq
 )
 
-# Enable usb output, disable uart output
+# Enable usb output, disable uart output (DO NOT REMOVE)
 pico_enable_stdio_usb(led_encoder 1)
-pico_enable_stdio_uart(led_encoder 1)
+pico_enable_stdio_uart(led_encoder 0)
 
-# Create map/bin/hex/uf2 file etc.
+# Create map/bin/hex/uf2 file etc. (DO NOT REMOVE)
 pico_add_extra_outputs(led_encoder)
